# fedis

./: .dockerignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md
.github/workflows/: perf-regression.yml  release-image.yml
benchmarks/: check_regression.py  latest_results.json  regression_thresholds.json  run_bench.py  run_bench_concurrent.py  run_suite.py  thresholds.json
src/: auth.rs  command.rs  config.rs  logging.rs  main.rs  persistence.rs  protocol.rs  server.rs  stats.rs  store.rs
src/command/: auth_compat.rs  expiry.rs  info.rs  json.rs  keyspace.rs  strings.rs  tests.rs
tests/: hardening_integration.rs
